force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Phone_Non_PP__c.field-meta.xml
<CustomField>
    <fullName>Phone_Non_PP__c</fullName>
    <description>Send SMS PP</description>
    <label>Phone Non PP</label>
    <type>Phone</type>
</CustomField>