force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Phone_PP__c.field-meta.xml
<CustomField>
    <fullName>Phone_PP__c</fullName>
    <description>Lookup phone Contact</description>
    <label>Phone PP</label>
    <type>Phone</type>
</CustomField>