force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Policy_Name_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name_Holder__c</fullName>
    <label>Policy Name Holder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>