force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/POO_LBD__c.field-meta.xml
<CustomField>
    <fullName>POO_LBD__c</fullName>
    <description>Power Of One - Log Book Activitiy Detail</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POO LBD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>