force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Preview_Document__c.field-meta.xml
<CustomField>
    <fullName>Preview_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cek sudah diklik preview document oleh agent atau belum</description>
    <label>Preview Document</label>
    <type>Checkbox</type>
</CustomField>