force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Remarks_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Long_Text__c</fullName>
    <description>Remarks with longer character limitation</description>
    <label>Remarks Long Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>