force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reguler</fullName>
            </value>
            <value>
                <fullName>Preferred Banking Customer</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>