force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Send_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Send_Datetime__c</fullName>
    <label>Send Datetime</label>
    <type>DateTime</type>
</CustomField>