force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Sensitive_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Customer__c</fullName>
    <label>Sensitive Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>