force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Shorten_Link__c.field-meta.xml
<CustomField>
    <fullName>Shorten_Link__c</fullName>
    <label>Shorten Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>