force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Stamp__c.field-meta.xml
<CustomField>
    <fullName>Stamp__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stamp Duty</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>