force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Status_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Status_Metadata__c</fullName>
    <label>Status Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>