force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Status_to_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Status_to_Metadata__c</fullName>
    <label>Status to Metadata</label>
    <length>50</length>
    <type>Text</type>
</CustomField>