force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Touchpoint_City__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_City__c</fullName>
    <formula>Log_Book_Activitiy__r.Touch_Point_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Touchpoint City</label>
    <type>Text</type>
</CustomField>