force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Transaction_Police_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Police_Name__c</fullName>
    <formula>IF(TEXT( Kind_Of_Transaction__c ) == &quot;Request_POS_Perubahan Lainnya&quot;, 
TEXT( Kind_Of_Transaction__c )&amp;&quot; - &quot;&amp;Policy_Number__c&amp;&quot; - &quot;&amp;TEXT(Jenis_Perubahan_Lainnya__c), 
TEXT( Kind_Of_Transaction__c )&amp;&quot; - &quot;&amp;Policy_Number__c )</formula>
    <label>Transaction Police Name</label>
    <type>Text</type>
</CustomField>