force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Kind_Of_Transaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>