force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/URL_ICF_Walkin__c.field-meta.xml
<CustomField>
    <fullName>URL_ICF_Walkin__c</fullName>
    <formula>&apos;https://axaid-ccc--c.vf.force.com/apex/TakeSurvey?id=a0P2s000001fuWXEAY&apos;+&apos;&amp;lbaId=&apos;+Id+&apos;&amp;caId=&apos;+Log_Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL ICF Walkin</label>
    <type>Text</type>
</CustomField>